# GaiaConfigurationService

./: GaiaConfigurationService.sln  README.md
GaiaConfigurationClient/: ConfigurationClient.cs  GaiaConfigurationClient.csproj
GaiaConfigurationServer/: GaiaConfigurationServer.csproj  Launcher.cs  Mapper.cs
Native/: CMakeLists.txt
Native/GaiaConfigurationClient/: CMakeLists.txt  ConfigurationClient.cpp  ConfigurationClient.hpp  GaiaConfigurationClient.hpp
Native/GaiaScrollBar/: CMakeLists.txt  Launcher.cpp
